hphp/test/zend/bad/ext/date/tests/date_default_timezone_get-4.php
<?php
	echo date_default_timezone_get(), "\n";
?>